--- a/Ingineria sistemelor soft/aplicatia/temaISS/client/build.gradle
+++ b/Ingineria sistemelor soft/aplicatia/temaISS/client/build.gradle
@@ -10,6 +10,10 @@ repositories {
 }
 
 dependencies {
+    implementation project(':model');
+    implementation project(':persistence');
+    implementation project(':server');
+    implementation project(':service');
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
