--- a/Ingineria sistemelor soft/aplicatia/temaISS/server/build.gradle
+++ b/Ingineria sistemelor soft/aplicatia/temaISS/server/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'com.example'
@@ -13,10 +14,14 @@ dependencies {
     implementation project(':model');
     implementation project(':persistence');
     implementation project(':service');
+    implementation project(':networking');
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 }
 
 test {
     useJUnitPlatform()
+}
+application {
+    mainClassName = 'com/example/Main'
 }
