--- a/Ingineria sistemelor soft/aplicatia/temaISS/model/build.gradle
+++ b/Ingineria sistemelor soft/aplicatia/temaISS/model/build.gradle
@@ -12,6 +12,8 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+
+    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.14.Final'
 }
 
 test {
