--- a/Ingineria sistemelor soft/aplicatia/temaISS/persistence/build.gradle
+++ b/Ingineria sistemelor soft/aplicatia/temaISS/persistence/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     implementation project(':model')
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+
+    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.14.Final'
     //https:mvnrepository.com/artifact/org.postgresql/postgresql
     implementation 'org.postgresql:postgresql:42.5.4'
 }
